update osds versions

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url("https://assets.osu.edu/osds/develop/css/osds-styles.css");
+@import url("https://assets.osu.edu/osds/v0.x/css/osds-styles.min.css");
 
 h1 {
   margin-bottom: 1rem;
